--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
 
     <div class="container p-4" id="app">
       <div class="row">
-        <div class="col-md-4">
+        <div id="book-container" class="col-md-5">
           <form id="book-form" class="card card-body">
             <div class="form-group">
               <input
@@ -70,7 +70,7 @@
           </form>
         </div>
 
-        <div class="col-md-8" id="books-cards"></div>
+        <div class="col-md-6" id="books-cards"></div>
       </div>
     </div>
   </body>
