--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,63 +15,70 @@
 
   <body>
     <!-- NAVIGATION -->
+   
     <nav class="navbar navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="/">Books App</a>
       </div>
     </nav>
-
-    <div class="container p-4" id="app">
-      <div class="row">
-        <div id="book-container" class="col-xs-12 col-sm-6 col-md-6">
-          <form id="book-form" class="card card-body">
-            <div class="form-group">
+<main>
+  <div class="container p-4" id="app">
+    <div class="row">
+      <div id="book-container" class="col-xs-12 col-sm-6 col-md-6">
+        <form id="book-form" class="card card-body">
+          <div class="form-group">
+            <input
+              type="text"
+              id="title"
+              class="form-control"
+              placeholder="Book Title"
+              autofocus
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="text"
+              id="author"
+              class="form-control"
+              placeholder="Author"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="text"
+              id="isbn"
+              class="form-control"
+              placeholder="ISBN"
+            />
+          </div>
+          <div class="input-group mb-3">
+            <div class="custom-file">
               <input
-                type="text"
-                id="title"
-                class="form-control"
-                placeholder="Book Title"
-                autofocus
+                type="file"
+                class="custom-file-input"
+                id="image"
+                required
               />
+              <label
+                class="custom-file-label"
+                for="image"
+                aria-describedby="inputGroupFileAddon02"
+                >Choose Image</label
+              >
             </div>
-            <div class="form-group">
-              <input
-                type="text"
-                id="author"
-                class="form-control"
-                placeholder="Author"
-              />
-            </div>
-            <div class="form-group">
-              <input
-                type="text"
-                id="isbn"
-                class="form-control"
-                placeholder="ISBN"
-              />
-            </div>
-            <div class="input-group mb-3">
-              <div class="custom-file">
-                <input
-                  type="file"
-                  class="custom-file-input"
-                  id="image"
-                  required
-                />
-                <label
-                  class="custom-file-label"
-                  for="image"
-                  aria-describedby="inputGroupFileAddon02"
-                  >Choose Image</label
-                >
-              </div>
-            </div>
-            <button type="Submit" class="btn btn-primary">Save Book</button>
-          </form>
-        </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-6" id="books-cards"></div>
+          </div>
+          <button type="Submit" class="btn btn-primary">Save Book</button>
+        </form>
       </div>
+
+      <div class="col-xs-12 col-sm-6 col-md-6" id="books-cards"></div>
     </div>
+  </div>
+</main>
+    <footer>
+      <div class="container">
+        <p class="card-text">&copy; Create buy <a href="https://github.com/miltondw">Milton Estrada</a> </p>
+      </div>
+    </footer>
   </body>
 </html>
