addend footer and styles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -77,7 +77,7 @@
 </main>
     <footer>
       <div class="container">
-        <p class="card-text">&copy; Create buy <a href="https://github.com/miltondw">Milton Estrada</a> </p>
+        <p class="card-text">&copy; Create by <a href="https://github.com/miltondw">Milton Estrada</a> </p>
       </div>
     </footer>
   </body>
